fix overflowing media-recognition dialog

--- a/frontend/components/media-modal/media-dialog-autosuggest/style.css
+++ b/frontend/components/media-modal/media-dialog-autosuggest/style.css
@@ -43,6 +43,9 @@
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   z-index: 2;
+
+  max-height: 400px;
+  overflow-y: auto;
 }
 
 .suggestion {
